// KDT Issue/LOT ERD — paste into https://dbdiagram.io
// Source: backend/schema.sql (after schema cleanup)
// handover_history = later (structure TBD)

TableGroup auth {
  users
  user_settings
}

TableGroup ops {
  lots
  issues
  handover_history
}

Table users {
  id int [pk, increment]
  user_id varchar(50) [unique, not null]
  password varchar(255) [not null]
  name varchar(50) [not null]
  phone varchar(20) [not null]
  email varchar(100) [not null]
  created_at datetime
  updated_at datetime
}

Table user_settings {
  user_id varchar(50) [pk, not null]
  font_size int [not null, default: 18]
  theme_mode tinyint [not null, default: 1, note: '0=dark 1=light']
  refresh_interval int [not null, default: 1, note: 'minutes']
  updated_at datetime
}

Table lots {
  lot_id varchar(64) [pk]
  recorded_at datetime [not null]
  d50 double
  d90 double
  metal_impurity double
  lithium_input double
  additive_ratio double
  process_time double
  sintering_temp double
  humidity double
  tank_pressure double
  operator_id varchar(32)
  quality_defect tinyint [not null, default: 0]
  defect_prob double
  residual_lithium double
  spc_status varchar(32)
  risk_level varchar(10) [not null, default: '낮음']
  risk_reason varchar(255)
  scored_at datetime
  created_at datetime
  updated_at datetime
}

Table issues {
  issue_id varchar(32) [pk, note: '이슈 ID']
  lot_id varchar(64) [not null]
  occurred_at datetime [not null, note: '일시']
  risk_level varchar(10) [not null]
  status varchar(20) [not null, default: '접수']
  title varchar(255) [not null, note: '이슈 내용']
  action_content text [note: '조치 내용']
  assignee_user_id varchar(50) [note: '담당자']
  completed_at datetime [note: '처리날짜']
}

Table handover_history {
  history_id bigint [pk, increment]
  issue_id varchar(32) [unique, not null, note: '후속 — 구조 TBD']
  lot_id varchar(64) [not null]
  risk_level varchar(10) [not null]
  situation varchar(255) [not null]
  action text
  cause varchar(255)
  handover_from varchar(50)
  handover_to varchar(50)
  manager varchar(50)
  assignee_user_id varchar(50)
  event_date date [not null]
  category varchar(32)
  snapshot_json json
  archived_at datetime
}

Ref: user_settings.user_id > users.user_id [delete: cascade]
Ref: issues.lot_id > lots.lot_id
Ref: issues.assignee_user_id > users.user_id [delete: set null]
Ref: handover_history.issue_id > issues.issue_id [delete: restrict]
Ref: handover_history.lot_id > lots.lot_id [delete: restrict]
Ref: handover_history.assignee_user_id > users.user_id [delete: set null]
